2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix exit status.
	* installcheck/amstatus.pl: Fix for previous patch.

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Show taping status after dump failure.

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: Add check for previous patch.

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Do it at the right place.

2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Use header is_partial to get dump
	  status for FILE-WRITE.

2012-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: print script output for backup with the
	  "| " prefix.

2012-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Missing return statement.

2012-12-03 Dan Locks <dwlocks@zmanda.com>
	* packaging/common/post_inst_functions.sh: add get_random_lines() and
	  use it to generate random passwords
	* packaging/common/test_sh_libs.sh: test and use get_random_lines(),
	  use static log file name, enforce order on tests using
	  (get_random_lines, create_gnupg, create_ampassphrase, and
	  create_amkey.
	* packaging/deb/postinst.src, packaging/rpm/amanda.spec.src,
	  packaging/sun-pkg/client/postinstall.src: use command -v instead of
	  unportable which.

2012-12-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/logfile.c (get_logline): Parse each line separately.

2012-11-28  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Force new connection after RequestTimeout.

2012-11-24 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec.src: fix comparison operator

2012-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Config.pl, installcheck/Amanda_DB_Catalog.pl,
	  installcheck/Installcheck/Config.pm, perl/Amanda/Report/human.pm,