@@ -1,3 +1,6 @@
+2012-12-06  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amstatus.pl: Parse new PORT-DUMP format
+
 2012-12-05  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amstatus.pl: Fix exit status.
 	* installcheck/amstatus.pl: Fix for previous patch.
